YACL Overhaul. Every single configuration is allowed to be client controlled. Admin overrides override a player's permissions. Client Configs are greyed out if they can't change them.